--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
     <head>
         <meta charset="UTF-8">
         <title>Log in to code fellowship</title>
+        <link href="styles.css" rel="stylesheet">
     </head>
 
     <body>
+
+        <div th:replace="fragments/header :: header">...</div>
 
         <h1>Log in</h1>
 
