--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Log in to code fellowship</title>
-        <link href="styles.css" rel="stylesheet">
+        <link href="/styles.css" rel="stylesheet">
     </head>
 
     <body>
