--- a/src/main/resources/templates/Fragments/header.html
+++ b/src/main/resources/templates/Fragments/header.html
@@ -1,10 +1,10 @@
 <header class="header" th:fragment="header" xmlns:th="http://www.springframework.org/schema/security">
-    <h1 align="center"><a href="/">Code Fellowship</a></h1>
-    <nav>
+
+    <nav class="primary">
 
         <a th:if="${loggedInName}" href="/user" th:text="${loggedInName}"></a>
 
-        <a th:if="${loggedInName}" href="/logout">Logout</a>
+        <a href="/">Code Fellowship Home</a>
 
         <a th:if="${loggedInName} == false" href="/login">Login</a>
 
@@ -12,7 +12,10 @@
 
         <a th:if="${loggedInName}" href="/post">Create a post</a>
 
+        <a th:if="${loggedInName}" href="/logout">Logout</a>
+
     </nav>
+
 </header>
 
 
